# Fusion

./: .gitignore  .gitmodules  Cargo.toml  rust-toolchain.toml  rustfmt.toml
Crates/Engine/Shaders/: Cargo.toml  tritium.rs
Crates/Engine/Shaders/Shared/: Cargo.toml  shared.rs
Crates/System/: Cargo.toml  fusion-sys.rs
Crates/System/PAL/: Cargo.toml  fusion-pal.rs
Crates/System/PAL/hal/: hal.rs
Crates/System/PAL/pal/: caps.rs  pal.rs
Crates/System/PAL/sys/: context.rs  event.rs  hal.rs  mem.rs  sync.rs  sys.rs  thread.rs
Crates/System/event/: event.rs
Crates/System/fiber/: fiber.rs
Crates/System/mem/: mem.rs
Crates/System/mem/pool/: builder.rs  capability.rs  error.rs  extent.rs  member.rs  pool.rs  request.rs  state.rs
Crates/System/mem/provider/: assessment.rs  builder.rs  from_pal.rs  groups.rs  inventory.rs  plan.rs  provider.rs  request.rs  support.rs
Crates/System/mem/resource/: attrs.rs  bound.rs  core.rs  domain.rs  error.rs  geometry.rs  handle.rs  ops.rs  range.rs  request.rs  reservation.rs  resolved.rs  resource.rs  state.rs  support.rs  view.rs
Crates/System/sync/: once.rs  rwlock.rs  spin.rs  sync.rs  thin_mutex.rs
Crates/System/tests/: fusion_sys.rs
Crates/System/thread/: handle.rs  pool.rs  system.rs  thread.rs
Crates/fusion-firmware/: Cargo.toml  build.rs  fusion-firmware.rs
Crates/fusion-firmware/aml/: aml.rs  bytecode.rs  context.rs  error.rs  eval.rs  field.rs  host.rs  loader.rs  lowering.rs  method.rs  name.rs  namespace.rs  notify.rs  object.rs  opregion.rs  parser.rs  reference.rs  state.rs  sync.rs  trace.rs  value.rs  verify.rs  vm.rs
Crates/fusion-firmware/build_support/: fdxe_select.rs
Crates/fusion-firmware/contract/: contract.rs
Crates/fusion-firmware/contract/firmware/: firmware.rs
Crates/fusion-firmware/macros/: Cargo.toml
Crates/fusion-firmware/macros/src/: lib.rs
Crates/fusion-firmware/module/: module.rs
Crates/fusion-firmware/pal/hal/: hardware.rs  runtime.rs
Crates/fusion-firmware/sys/: sys.rs
Crates/fusion-firmware/sys/hal/: hal.rs
Crates/fusion-firmware/tests/: fusion_firmware.rs
Crates/fusion-hal/: Cargo.toml  fusion-hal.rs
Crates/fusion-hal/contract/: contract.rs
Crates/fusion-hal/driver-dogma/: Cargo.toml  fusion-driver-dogma.rs
Crates/fusion-hal/drivers/: drivers.rs
Crates/fusion-hal/fdxe/: fdxe.rs  shared.rs
Crates/fusion-kn/: 99-fusion-kn.rules  Cargo.toml  Kbuild  Makefile  README.md  build.rs  fusion-kn.rs  fusion_kn.rs
Crates/fusion-kn/blueprint/: blueprint.rs
Crates/fusion-kn/client/: client.rs
Crates/fusion-kn/contract/: contract.rs  wire.rs
Crates/fusion-kn/evidence/: evidence.rs
Crates/fusion-kn/module/: module.rs
Crates/fusion-pal/: Cargo.toml  build.rs  fusion-pal.rs
Crates/fusion-pal/contract/: caps.rs  contract.rs
Crates/fusion-pal/pal/: cpu.rs  pal.rs
Crates/fusion-pal/pcu/: error.rs  generic_caps.rs  generic_unsupported.rs  pcu.rs
Crates/fusion-pal/sys/: runtime_dispatch.rs  runtime_progress.rs  sys.rs  vector_runtime.rs
Crates/fusion-pal/tests/: fusion_pal.rs
Crates/fusion-pcu/: Cargo.toml  core.rs  dispatch.rs  fusion-pcu.rs  ir.rs  stream.rs  system.rs  validation.rs
Crates/fusion-pcu/contract/: caps.rs  contract.rs  device.rs  error.rs  invocation.rs  ir.rs
Crates/fusion-pcu/model/: command.rs  dispatch.rs  model.rs  signal.rs  stream.rs  transaction.rs
Crates/fusion-std/: Cargo.toml  build.rs  fiber-task.contracts  fiber-task.generated  fiber-task.roots  fusion-std.rs
Crates/fusion-std/benches/: compare_tokio.rs  fiber_runtime.rs  hosted_std.rs
Crates/fusion-std/claims/: claims.rs
Crates/fusion-std/component/: audio_jack.rs  button.rs  buzzer.rs  component.rs  led.rs  led_pair.rs  oled.rs  seven_segment.rs  shift_register_74hc595.rs  speaker.rs
Crates/fusion-std/pcu/: pcu.rs  stream.rs
Crates/fusion-std/sync/: sync.rs
Crates/fusion-std/tests/: fusion_std.rs
Crates/fusion-std/thread/: executor.rs  fiber.rs  fiber_audit.rs  graph.rs  pool.rs  red.rs  runtime.rs  runtime_audit.rs  system.rs  thread.rs  tier.rs
Crates/fusion-sys/: Cargo.toml  fusion-sys.rs
Crates/fusion-sys/alloc/: alloc.rs  arena.rs  control.rs  domain.rs  error.rs  heap.rs  lifetime.rs  metadata.rs  policy.rs  protocol.rs  root.rs  service.rs  slab.rs
Crates/fusion-sys/atomic/: atomic.rs
Crates/fusion-sys/channel/: channel.rs
Crates/fusion-sys/claims/: claims.rs  tests.rs
Crates/fusion-sys/context/: context.rs  local.rs
Crates/fusion-sys/courier/: courier.rs  local.rs  tests.rs
Crates/fusion-sys/dma/: dma.rs
Crates/fusion-sys/domain/: domain.rs  handles.rs  sink.rs  tests.rs
Crates/fusion-sys/event/: event.rs
Crates/fusion-sys/fiber/: fiber.rs
Crates/fusion-sys/fusion-pal/: Cargo.toml  fusion-pal.rs
Crates/fusion-sys/gpio/: gpio.rs
Crates/fusion-sys/hardware/: hardware.rs
Crates/fusion-sys/insight/: insight.rs  timeline.rs
Crates/fusion-sys/local/: local.rs
Crates/fusion-sys/locator/: locator.rs
Crates/fusion-sys/mem/: mem.rs
Crates/fusion-sys/pcu/: cortex_m.rs  dispatch.rs  ingestor.rs  ir.rs  kernels.rs  pcu.rs  plan.rs  stream.rs  system.rs
Crates/fusion-sys/power/: power.rs
Crates/fusion-sys/sync/: left_right.rs  mutex.rs  once.rs  rwlock.rs  semaphore.rs  shared.rs  spin.rs  sync.rs  thin_mutex.rs
Crates/fusion-sys/tests/: fusion_sys.rs
Crates/fusion-sys/thread/: carrier.rs  pool.rs  system.rs  thread.rs  time.rs  vector.rs
Crates/fusion-sys/transport/: transport.rs
Crates/fusion-sys/vector/: vector.rs
Engine/Shaders/: Build.rs  Cargo.toml  tritium.rs
Engine/Shaders/.cargo/: config.toml
Engine/Shaders/Shared/: Cargo.toml  shared.rs
Examples/Cortex-M/RP2350/: Cargo.toml  README.md  build_id_build.rs  pio.md
Examples/Hosted/AllocatorAudit/: Cargo.toml  main.rs
Examples/Hosted/Template/: Cargo.toml  main.rs
Examples/PicoTarget/: Cargo.toml  Embed.toml  README.md  bench.rs  build.rs  main.rs  memory.x  support.rs
Examples/PicoTarget/.cargo/: config.toml
System/fusion-kernel/: Cargo.toml  claims.rs  fusion-kernel.rs  lib.rs
crates/lib/fusion-rhi/: Cargo.toml  fusion-rhi.rs
(+939 files in other folders)
