[workspace]
resolver = "3"
members = [
    "Crates/fusion-pal",
    "Crates/fusion-sys",
    "Crates/fusion-std/pcu/macros",
    "Crates/fusion-std",
    "Crates/fusion-kn",
    "Examples/Hosted/Template",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Lance Wallis <walance@pvas.me>"]
license = ""
repository = ""

[workspace.dependencies]
fusion-pal = { path = "Crates/fusion-pal", default-features = false }
fusion-sys = { path = "Crates/fusion-sys", default-features = false }
fusion-std-pcu-macros = { path = "Crates/fusion-std/pcu/macros" }
fusion-std = { path = "Crates/fusion-std", default-features = false }
fusion-kn = { path = "Crates/fusion-kn", default-features = false }

ash = { version = "0.38.0", default-features = false, features = ["linked"] }
bitflags = "2.11.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full"] }
escargot = "0.5.15"
libc = { version = "0.2.183", default-features = false }
rustix = { version = "1.1.4", default-features = false, features = ["fs", "mm", "param", "process", "system", "thread"] }
object = { version = "0.36.7", default-features = false, features = ["read"] }
tokio = { version = "1.44", features = ["rt", "rt-multi-thread"] }
context = "3.0.0"
cortex-m = { version = "0.7.7", default-features = false }
cortex-m-rt = { version = "0.7.5", default-features = false }
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu.git", branch = "main" }
windows = "0.62.2"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_arch, values("spirv"))'] }

[profile.bench]
debug = 2
