[workspace]
resolver = "3"
members = [
    # fusion substrate crates.
    "Crates/fusion-firmware/macros",
    "Crates/fusion-firmware",
    "Crates/fusion-hal",
    "Crates/fusion-pal",
    "Crates/fusion-pcu",
    "Crates/fusion-sys",
    "Crates/fusion-std/pcu/macros",
    "Crates/fusion-std",
    "Crates/fusion-kn",

    # Hosted example.
    "Examples/Hosted/Template",
    "Examples/Hosted/AllocatorAudit",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Lance Wallis <walance@pvas.me>"]
license = ""
repository = ""

[workspace.dependencies]
# Fusion substrate stack.
fusion-firmware = { path = "Crates/fusion-firmware", default-features = false }
fusion-firmware-macros = { path = "Crates/fusion-firmware/macros" }
fusion-hal = { path = "Crates/fusion-hal", default-features = false }
fusion-pal = { path = "Crates/fusion-pal", default-features = false }
fusion-pcu = { path = "Crates/fusion-pcu", default-features = false }
fusion-sys = { path = "Crates/fusion-sys", default-features = false }
fusion-std-pcu-macros = { path = "Crates/fusion-std/pcu/macros" }
fusion-std = { path = "Crates/fusion-std", default-features = false }
fusion-kn = { path = "Crates/fusion-kn" }

cortex-m = { version = "0.7.7", default-features = false }
cortex-m-rt = { version = "0.7.5", default-features = false }

ash = { version = "0.38.0", default-features = false, features = ["linked"] }
bitflags = "2.11.0"
escargot = "0.5.15"
libc = "0.2.177"
object = { version = "0.37.3", default-features = false, features = ["read"] }
proc-macro2 = "1.0.103"
quote = "1.0.41"
rustix = { version = "1.1.2", default-features = false, features = ["fs", "mm", "param", "process", "runtime", "system", "thread"] }
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu.git", branch = "main" }
syn = { version = "2.0.108", features = ["full"] }
# External comparison/runtime dependency used only by hosted `fusion-std` benches.
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
windows = "0.62.2"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_arch, values("spirv"))'] }

[profile.bench]
debug = 2
