[package]
name = "fusion-firmware"
description = ""
documentation = ""
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[lib]
crate-type = ["rlib"]
path = "fusion-firmware.rs"

[features]
default = ["std"]
std = ["fusion-hal/std", "fusion-pal/std", "fusion-sys/std", "fusion-std/std"]
soc = ["fusion-hal/soc", "fusion-pal/soc", "fusion-sys/soc", "fusion-std/soc"]
hosted = ["std", "fusion-hal/hosted", "fusion-pal/hosted", "fusion-sys/hosted", "fusion-std/hosted"]
critical-safe = ["fusion-hal/critical-safe", "fusion-pal/critical-safe", "fusion-sys/critical-safe", "fusion-std/critical-safe"]
debug-profile = ["fusion-hal/debug-profile", "fusion-pal/debug-profile", "fusion-sys/debug-profile", "fusion-std/debug-profile"]
debug-insights = ["fusion-hal/debug-insights", "fusion-pal/debug-insights", "fusion-sys/debug-insights", "fusion-std/debug-insights"]
sys-cortex-m = ["soc", "fusion-hal/sys-cortex-m", "fusion-pal/sys-cortex-m", "fusion-sys/sys-cortex-m", "fusion-std/sys-cortex-m"]
soc-rp2350 = [
    "sys-cortex-m",
    "fusion-hal/soc-rp2350",
    "fusion-pal/soc-rp2350",
    "fusion-sys/soc-rp2350",
    "fusion-std/soc-rp2350",
    "dep:fd-bus-gpio",
    "fd-bus-gpio/soc-rp2350",
    "dep:fd-net-chipset-infineon-cyw43439",
    "fd-net-chipset-infineon-cyw43439/soc-rp2350",
]
sys-fusion-kn = ["hosted", "fusion-hal/sys-fusion-kn", "fusion-pal/sys-fusion-kn", "fusion-sys/sys-fusion-kn", "fusion-std/sys-fusion-kn"]
cortex-m-vector-secure-world = [
    "fusion-hal/cortex-m-vector-secure-world",
    "fusion-pal/cortex-m-vector-secure-world",
    "fusion-sys/cortex-m-vector-secure-world",
    "fusion-std/cortex-m-vector-secure-world",
]
cortex-m-vector-nonsecure-world = [
    "fusion-hal/cortex-m-vector-nonsecure-world",
    "fusion-pal/cortex-m-vector-nonsecure-world",
    "fusion-sys/cortex-m-vector-nonsecure-world",
    "fusion-std/cortex-m-vector-nonsecure-world",
]

[dependencies]
bitflags.workspace = true
fusion-firmware-macros = { workspace = true }
fusion-hal = { workspace = true, default-features = false }
fusion-pal = { workspace = true, default-features = false }
fusion-sys = { workspace = true, default-features = false }
fusion-std = { workspace = true, default-features = false }

[target.'cfg(target_os = "none")'.dependencies]
fd-bus-gpio = { path = "../fusion-hal/drivers/bus/gpio", default-features = false, optional = true }
fd-net-chipset-infineon-cyw43439 = { path = "../fusion-hal/drivers/net/chipset/infineon/cyw43439", default-features = false, optional = true }

[lints]
workspace = true
