[package]
name = "fusion-kn"
description = ""
documentation = ""
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib"]
path = "fusion-kn.rs"
test = false
doctest = false

[features]
default = ["contract"]
contract = []
client = ["contract"]
module = ["contract"]

[dependencies]
bitflags.workspace = true

[lints]
workspace = true
