[package]
name = "fusion-pal"
description = ""
documentation = ""
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[lib]
crate-type = ["rlib"]
path = "fusion-pal.rs"

[features]
default = ["std", "hosted"]
std = []
soc = []
hosted = ["std"]
critical-safe = []
debug-profile = []
debug-insights = []
sys-cortex-m = [
    "soc",
    "dep:cortex-m",
    "dep:cortex-m-rt",
]
soc-rp2350 = ["sys-cortex-m", "dep:fd-net-chipset-infineon-cyw43439", "fd-net-chipset-infineon-cyw43439/soc-rp2350"]
sys-fusion-kn = ["hosted", "dep:fusion-kn"]
cortex-m-vector-secure-world = []
cortex-m-vector-nonsecure-world = []

[lints]
workspace = true

[dependencies]
bitflags.workspace = true
fusion-hal = { workspace = true, default-features = false }
fusion-kn = { workspace = true, optional = true, features = ["client"] }

[target.'cfg(target_os = "none")'.dependencies]
cortex-m = { workspace = true, optional = true }
cortex-m-rt = { workspace = true, optional = true }
fd-net-chipset-infineon-cyw43439 = { workspace = true, default-features = false, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true
rustix.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
libc.workspace = true
