[package]
name = "fusion-pal"
description = ""
documentation = ""
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[lib]
crate-type = ["rlib"]
path = "fusion-pal.rs"

[features]
default = ["std", "hosted"]
std = []
soc = []
hosted = ["std"]
critical-safe = []
debug-profile = []
debug-insights = []
fd-bus-usb = ["dep:fd-bus-usb"]
sys-cortex-m = [
    "soc",
    "dep:cortex-m",
    "dep:cortex-m-rt",
]
soc-rp2350 = [
    "sys-cortex-m",
    "dep:fd-bus-gpio",
    "fd-bus-gpio/soc-rp2350",
    "dep:fd-bus-usb",
    "fd-bus-usb/soc-rp2350",
    "dep:fd-net-chipset-infineon-cyw43439",
    "fd-net-chipset-infineon-cyw43439/soc-rp2350",
]
sys-fusion-kn = ["hosted", "dep:fusion-kn"]
cortex-m-vector-secure-world = []
cortex-m-vector-nonsecure-world = []

[lints]
workspace = true

[dependencies]
bitflags.workspace = true
fusion-hal = { workspace = true, default-features = false }
fusion-kn = { workspace = true, optional = true, features = ["client"] }
fd-bus-usb = { path = "../fusion-hal/drivers/bus/usb", default-features = false, optional = true }

[target.'cfg(target_os = "none")'.dependencies]
cortex-m = { workspace = true, optional = true }
cortex-m-rt = { workspace = true, optional = true }
fd-bus-gpio = { path = "../fusion-hal/drivers/bus/gpio", default-features = false, optional = true }
fd-bus-usb = { path = "../fusion-hal/drivers/bus/usb", default-features = false, optional = true }
fd-net-chipset-infineon-cyw43439 = { path = "../fusion-hal/drivers/net/chipset/infineon/cyw43439", default-features = false, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
fd-bus-usb = { path = "../fusion-hal/drivers/bus/usb", default-features = false, features = ["std"], optional = true }
libc.workspace = true
rustix.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
fd-bus-usb = { path = "../fusion-hal/drivers/bus/usb", default-features = false, features = ["std"], optional = true }
libc.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
fd-bus-usb = { path = "../fusion-hal/drivers/bus/usb", default-features = false, features = ["std"], optional = true }

[target.'cfg(target_os = "ios")'.dependencies]
fd-bus-usb = { path = "../fusion-hal/drivers/bus/usb", default-features = false, features = ["std"], optional = true }
