[package]
name = "fusion-pcu"
description = ""
documentation = ""
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib"]
path = "fusion-pcu.rs"

[features]
default = ["std", "hosted"]
std = ["fusion-pal/std"]
soc = ["fusion-pal/soc"]
hosted = ["std", "fusion-pal/hosted"]
critical-safe = ["fusion-pal/critical-safe"]
debug-profile = ["fusion-pal/debug-profile"]
debug-insights = ["fusion-pal/debug-insights"]
sys-cortex-m = ["soc", "fusion-pal/sys-cortex-m"]
soc-rp2350 = ["sys-cortex-m", "fusion-pal/soc-rp2350"]
sys-fusion-kn = ["hosted", "fusion-pal/sys-fusion-kn"]
cortex-m-vector-secure-world = ["fusion-pal/cortex-m-vector-secure-world"]
cortex-m-vector-nonsecure-world = ["fusion-pal/cortex-m-vector-nonsecure-world"]

[dependencies]
fusion-pal = { workspace = true, default-features = false }

[lints]
workspace = true
