[package]
name = "fusion-pcu"
description = ""
documentation = ""
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib"]
path = "fusion-pcu.rs"

[features]
default = []
std = []
soc = []
hosted = ["std"]
critical-safe = []
debug-profile = []
debug-insights = []
sys-cortex-m = ["soc"]
soc-rp2350 = ["sys-cortex-m"]
sys-fusion-kn = ["hosted"]
cortex-m-vector-secure-world = []
cortex-m-vector-nonsecure-world = []

[lints]
workspace = true
