[package]
name = "fusion-std"
description = ""
documentation = ""
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[lib]
crate-type = ["rlib"]
path = "fusion-std.rs"

[[bin]]
name = "fusion_std_fiber_fault_probe"
path = "bin/fiber_fault_probe.rs"

[[bin]]
name = "fusion_std_fiber_task_analyzer"
path = "bin/fiber_task_analyzer.rs"

[[bin]]
name = "fusion_std_fiber_task_pipeline"
path = "bin/fiber_task_pipeline.rs"

[[bin]]
name = "fusion_std_fiber_task_roots"
path = "bin/fiber_task_roots.rs"

[[bin]]
name = "fusion_std_fiber_task_closure_fixture"
path = "bin/fiber_task_closure_fixture.rs"

[[bin]]
name = "fusion_std_fiber_metrics_probe"
path = "bin/fiber_metrics_probe.rs"

[[bin]]
name = "fusion_std_fiber_lifecycle_probe"
path = "bin/fiber_lifecycle_probe.rs"

[[bin]]
name = "fusion_std_pico_tool"
path = "bin/fusion_std_pico_tool.rs"

[features]
default = ["std"]
std = []
sys-cortex-m = ["fusion-sys/sys-cortex-m"]
soc-rp2350 = ["sys-cortex-m", "fusion-sys/soc-rp2350"]
sys-fusion-kn = ["fusion-sys/sys-fusion-kn"]
critical-safe-generated-contracts = []
cortex-m-vector-secure-world = ["fusion-sys/cortex-m-vector-secure-world"]
cortex-m-vector-nonsecure-world = ["fusion-sys/cortex-m-vector-nonsecure-world"]

[dependencies]
fusion-pal = { workspace = true }
fusion-sys = { workspace = true }

[target.'cfg(not(target_os = "none"))'.dependencies]
object = { version = "0.36.7", default-features = false, features = ["read"] }

[dev-dependencies]
libc = "0.2"

[target.'cfg(not(target_os = "none"))'.dev-dependencies]
tokio = { version = "1.44", features = ["rt", "rt-multi-thread"] }

[lints]
workspace = true
