[package]
name = "fusion-std"
description = ""
documentation = ""
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[lib]
crate-type = ["rlib"]
path = "fusion-std.rs"

[[bin]]
name = "fusion_std_fiber_fault_probe"
path = "bin/fiber_fault_probe.rs"

[[bin]]
name = "fusion_std_fiber_task_analyzer"
path = "bin/fiber_task_analyzer.rs"

[[bin]]
name = "fusion_std_fiber_task_pipeline"
path = "bin/fiber_task_pipeline.rs"

[[bin]]
name = "fusion_std_fiber_task_roots"
path = "bin/fiber_task_roots.rs"

[[bin]]
name = "fusion_std_fiber_task_closure_fixture"
path = "bin/fiber_task_closure_fixture.rs"

[[bin]]
name = "fusion_std_fiber_metrics_probe"
path = "bin/fiber_metrics_probe.rs"

[[bin]]
name = "fusion_std_fiber_lifecycle_probe"
path = "bin/fiber_lifecycle_probe.rs"

[[bin]]
name = "fusion_std_async_lifecycle_probe"
path = "bin/async_lifecycle_probe.rs"

[[bin]]
name = "fusion_std_pico_tool"
path = "bin/fusion_std_pico_tool.rs"

[features]
default = ["std", "hosted"]
std = []
soc = ["fusion-sys/soc"]
hosted = ["std", "fusion-sys/hosted"]
hal = ["fusion-sys/hal"]
critical-safe = ["fusion-sys/critical-safe"]
debug-profile = ["fusion-sys/debug-profile"]
sys-cortex-m = ["soc", "fusion-sys/sys-cortex-m"]
soc-rp2350 = ["sys-cortex-m", "fusion-sys/soc-rp2350"]
sys-fusion-kn = ["hosted", "fusion-sys/sys-fusion-kn"]
cortex-m-vector-secure-world = ["fusion-sys/cortex-m-vector-secure-world"]
cortex-m-vector-nonsecure-world = ["fusion-sys/cortex-m-vector-nonsecure-world"]
sizing-global-nearest-round-up = []

[dependencies]
fusion-pal = { workspace = true }
fusion-sys = { workspace = true }
fusion-std-pcu-macros = { workspace = true }

[target.'cfg(not(target_os = "none"))'.dependencies]
object.workspace = true

[dev-dependencies]
libc.workspace = true

[target.'cfg(not(target_os = "none"))'.dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
