[package]
name = "fusion-sys"
description = ""
documentation = ""
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib"]
path = "fusion-sys.rs"

[features]
default = []
sys-cortex-m = ["fusion-pal/sys-cortex-m"]
soc-rp2350 = ["fusion-pal/soc-rp2350"]
sys-fusion-kn = ["fusion-pal/sys-fusion-kn"]
cortex-m-vector-secure-world = ["fusion-pal/cortex-m-vector-secure-world"]
cortex-m-vector-nonsecure-world = ["fusion-pal/cortex-m-vector-nonsecure-world"]

[dependencies]
fusion-pal = { workspace = true }
bitflags.workspace = true

[dev-dependencies]
libc = "0.2.183"
rustix = { version = "1.1.4", default-features = false, features = ["fs"] }

[lints]
workspace = true
