[package]
version = "0.1.0"
authors = ["Lance Wallis <walance@pvas.me>"]
# Must match rust-gpu.
edition.workspace = true
license.workspace = true
repository = ""
name = "tritium"
description = ""
documentation = ""

[lib]
crate-type = ["dylib"]
path = "tritium.rs"

[dependencies]
#rust-gpu = { workspace = true }
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu.git", branch = "main" }

[build-dependencies]
escargot = "0.5"
