[package]
name = "fusion-example-pico"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "pico"
path = "main.rs"

[[bin]]
name = "pico_bench"
path = "bench.rs"

[features]
default = []
sizing-global-nearest-round-up = []

[dependencies]
fusion-pal = { workspace = true }
fusion-std = { path = "../../Crates/fusion-std", default-features = false, features = ["sys-cortex-m", "soc-rp2350"] }
fusion-sys = { path = "../../Crates/fusion-sys", default-features = false, features = ["sys-cortex-m", "soc-rp2350"] }
cortex-m = { version = "0.7.7", default-features = false }
cortex-m-rt = { version = "0.7.5", default-features = false }

[build-dependencies]
fusion-std = { path = "../../Crates/fusion-std" }

[lints]
workspace = true
