[package]
name = "fusion-pal"
description = ""
documentation = ""
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib"]
path = "fusion-pal.rs"

[features]
default = []
sys-cortex-m = ["dep:cortex-m", "dep:cortex-m-rt"]
soc-rp2350 = ["sys-cortex-m"]
sys-fusion-kn = ["dep:fusion-kn"]
cortex-m-vector-secure-world = []
cortex-m-vector-nonsecure-world = []

[lints]
workspace = true

[dependencies]
bitflags.workspace = true
fusion-kn = { path = "../../fusion-kn", optional = true, default-features = false, features = ["client"] }

[target.'cfg(target_os = "none")'.dependencies]
cortex-m = { version = "0.7.7", optional = true, default-features = false }
cortex-m-rt = { version = "0.7.5", optional = true, default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "0.2.183", default-features = false }
rustix = { version = "1.1.4", default-features = false, features = ["fs", "mm", "param", "process", "system", "thread"] }
