[package]
name = "fusion-example-template"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "template"
path = "main.rs"

[features]
default = ["std", "hosted"]
hosted = ["fusion-std/hosted"]
std = ["fusion-std/std"]

[dependencies]
fusion-std.workspace = true

[lints]
workspace = true
