[package]
name = "fusion-rhi"
version = "0.1.0"
authors = ["Lance Wallis <walance@pvas.me>"]
edition = "2021"

[lib]
path = "fusion-rhi.rs"

[dependencies]
fusion-util = { path = "../fusion-util/" }

ash = { version = "0.37.3+1.3.251", features = ["linked", "debug",] }
ash-window = "0.12.0"

tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-appender = "0.2.2"

winit = "0.28.6"
raw-window-handle = "0.5.2"
bitflags = "2"

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
]
