[package]
name = "fusion-example-rp2350-benchmark"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rp2350_benchmark"
path = "main.rs"

[features]
default = []
sizing-global-nearest-round-up = []

[dependencies]
fusion-example-rp2350-on-device = { workspace = true }
fusion-firmware = { workspace = true, features = ["soc-rp2350"] }
fusion-pal = { workspace = true, features = ["soc-rp2350"] }
fusion-std = { workspace = true, features = ["soc-rp2350"] }
fusion-sys = { workspace = true, features = ["soc-rp2350"] }
cortex-m = { workspace = true }

[lints]
workspace = true
